Fix scrollbar behavior to not overlap with border and handle event overflow.

--- a/src/components/CalendarEvent.module.css
+++ b/src/components/CalendarEvent.module.css
@@ -24,16 +24,23 @@
     width: 100%;
     height: 59%;
     background-color: white;
-    padding: 1em 1em 0.5em 1em;
+    padding: 0.5em 0.75em 0.5em 1em;
     box-sizing: border-box;
     border-radius: 0px 0px 12px 12px;
+}
+
+.eventScrollWindow {
+    height: 100%;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: light transparent;
 }
 
 .eventDescription {
     font-family: Gotu, sans-serif;
     font-size: 24px;
     color: #3D1E6B;
-    margin: 0;
+    margin: 0.5em 0 0 0;
 }
 
 .eventInfo {
